// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Screen /> should handle "loading/loadingOverlayProps" props 1`] = `
<Screen
  loading={true}
  loadingOverlayProps={
    Object {
      "spinnerProps": Object {
        "size": "medium",
      },
    }
  }
>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="loading-overlay fill"
            >
              <div>
                <svg
                  class="spinner size-medium"
                  height="48"
                  stroke="#1f84db"
                  viewBox="0 0 48 48"
                  width="48"
                >
                  <circle
                    class="circle"
                    cx="24"
                    cy="24"
                    r="23"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <LoadingOverlay
          spinnerProps={
            Object {
              "size": "medium",
            }
          }
        >
          <div
            className="loading-overlay fill"
          >
            <Spinner
              size="medium"
            >
              <div>
                <svg
                  className="spinner size-medium"
                  height={48}
                  stroke="#1f84db"
                  viewBox="0 0 48 48"
                  width={48}
                >
                  <circle
                    className="circle"
                    cx={24}
                    cy={24}
                    r={23}
                  />
                </svg>
              </div>
            </Spinner>
          </div>
        </LoadingOverlay>
      </div>
    </Portal>
  </Layer>
</Screen>
`;

exports[`<Screen /> should handle "loadingArea" prop 1`] = `
<Screen
  loading={true}
  loadingArea="content"
>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="nav-bar inner-border-bottom"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Закрыть"
                    class="button icon stub"
                  />
                </div>
              </div>
              <div
                class="main"
              />
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    aria-label="Закрыть"
                    class="button icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="#212121"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            >
              <div
                class="loading-overlay"
                style="height: 100%;"
              >
                <div>
                  <svg
                    class="spinner size-medium"
                    height="48"
                    stroke="#1f84db"
                    viewBox="0 0 48 48"
                    width="48"
                  >
                    <circle
                      class="circle"
                      cx="24"
                      cy="24"
                      r="23"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <ScreenLayout
          childrenRef={[Function]}
          fullScrollThreshold={320}
          onBack={[Function]}
          onClose={[Function]}
          withBackButton={false}
          withCloseButton={true}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "aria-label": "Закрыть",
                  "icon": [Function],
                  "onClick": [Function],
                },
                "start": undefined,
              }
            }
          >
            <div
              className="nav-bar inner-border-bottom"
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                    stub={true}
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть"
                      className="button icon stub"
                      onClick={[Function]}
                    />
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              />
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                  >
                    <button
                      aria-label="Закрыть"
                      className="button icon"
                      onClick={[Function]}
                    >
                      <CrossSVG
                        aria-hidden="true"
                        fill="#212121"
                      >
                        <svg
                          aria-hidden="true"
                          fill="#212121"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </CrossSVG>
                    </button>
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          >
            <LoadingOverlay
              fill={false}
              style={
                Object {
                  "height": "100%",
                }
              }
            >
              <div
                className="loading-overlay"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <Spinner>
                  <div>
                    <svg
                      className="spinner size-medium"
                      height={48}
                      stroke="#1f84db"
                      viewBox="0 0 48 48"
                      width={48}
                    >
                      <circle
                        className="circle"
                        cx={24}
                        cy={24}
                        r={23}
                      />
                    </svg>
                  </div>
                </Spinner>
              </div>
            </LoadingOverlay>
          </div>
        </ScreenLayout>
      </div>
    </Portal>
  </Layer>
</Screen>
`;

exports[`<Screen /> should handle props 1`] = `
<Screen
  footer="Test footer"
  onBack={[MockFunction]}
  onClose={[MockFunction]}
  subtitle="Test subtitle"
  title="Test title"
  withBackButton={true}
  withCloseButton={true}
>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="nav-bar inner-border-bottom"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-label="Вернуться назад"
                    class="button icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="#212121"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        d="M5.414 13l5.293 5.293a1 1 0 01-1.414 1.414l-7-7a1 1 0 010-1.414l7-7a1 1 0 011.414 1.414L5.414 11H21a1 1 0 110 2H5.414z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Закрыть Test title"
                    class="button icon stub"
                  />
                </div>
              </div>
              <div
                class="main"
              >
                <div
                  class="title truncate"
                >
                  Test title
                </div>
                <div
                  class="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    aria-label="Закрыть Test title"
                    class="button icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="#212121"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Вернуться назад"
                    class="button icon stub"
                  />
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            >
              Test content
            </div>
            <div
              class="footer full-width"
            >
              Test footer
            </div>
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <ScreenLayout
          childrenRef={[Function]}
          footer="Test footer"
          fullScrollThreshold={320}
          onBack={[Function]}
          onClose={[Function]}
          subtitle="Test subtitle"
          title="Test title"
          withBackButton={true}
          withCloseButton={true}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "aria-label": "Закрыть Test title",
                  "icon": [Function],
                  "onClick": [Function],
                },
                "start": Object {
                  "aria-label": "Вернуться назад",
                  "icon": [Function],
                  "onClick": [Function],
                },
              }
            }
            subtitle="Test subtitle"
            title="Test title"
          >
            <div
              className="nav-bar inner-border-bottom"
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Вернуться назад"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                  >
                    <button
                      aria-label="Вернуться назад"
                      className="button icon"
                      onClick={[Function]}
                    >
                      <ArrowLeftSVG
                        aria-hidden="true"
                        fill="#212121"
                      >
                        <svg
                          aria-hidden="true"
                          fill="#212121"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            d="M5.414 13l5.293 5.293a1 1 0 01-1.414 1.414l-7-7a1 1 0 010-1.414l7-7a1 1 0 011.414 1.414L5.414 11H21a1 1 0 110 2H5.414z"
                          />
                        </svg>
                      </ArrowLeftSVG>
                    </button>
                  </NavButton>
                </div>
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть Test title"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                    stub={true}
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть Test title"
                      className="button icon stub"
                      onClick={[Function]}
                    />
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              >
                <div
                  className="title truncate"
                >
                  Test title
                </div>
                <div
                  className="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть Test title"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                  >
                    <button
                      aria-label="Закрыть Test title"
                      className="button icon"
                      onClick={[Function]}
                    >
                      <CrossSVG
                        aria-hidden="true"
                        fill="#212121"
                      >
                        <svg
                          aria-hidden="true"
                          fill="#212121"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </CrossSVG>
                    </button>
                  </NavButton>
                </div>
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Вернуться назад"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                    stub={true}
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Вернуться назад"
                      className="button icon stub"
                      onClick={[Function]}
                    />
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          >
            Test content
          </div>
          <div
            className="footer full-width"
          >
            Test footer
          </div>
        </ScreenLayout>
      </div>
    </Portal>
  </Layer>
</Screen>
`;

exports[`<Screen /> should render without props 1`] = `
<Screen>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="nav-bar inner-border-bottom"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    aria-label="Закрыть"
                    class="button icon stub"
                  />
                </div>
              </div>
              <div
                class="main"
              />
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    aria-label="Закрыть"
                    class="button icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="#212121"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            />
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <ScreenLayout
          childrenRef={[Function]}
          fullScrollThreshold={320}
          onBack={[Function]}
          onClose={[Function]}
          withBackButton={false}
          withCloseButton={true}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "aria-label": "Закрыть",
                  "icon": [Function],
                  "onClick": [Function],
                },
                "start": undefined,
              }
            }
          >
            <div
              className="nav-bar inner-border-bottom"
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                    stub={true}
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть"
                      className="button icon stub"
                      onClick={[Function]}
                    />
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              />
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    aria-label="Закрыть"
                    icon={[Function]}
                    onClick={[Function]}
                    shift={false}
                  >
                    <button
                      aria-label="Закрыть"
                      className="button icon"
                      onClick={[Function]}
                    >
                      <CrossSVG
                        aria-hidden="true"
                        fill="#212121"
                      >
                        <svg
                          aria-hidden="true"
                          fill="#212121"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </CrossSVG>
                    </button>
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          />
        </ScreenLayout>
      </div>
    </Portal>
  </Layer>
</Screen>
`;

exports[`<Screen /> should renders without close button 1`] = `
<Screen
  navBarProps={
    Object {
      "buttons": Object {
        "end": Object {
          "text": "cross replacer",
        },
      },
    }
  }
  subtitle="Test subtitle"
  title="Test title"
  withCloseButton={false}
>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="nav-bar inner-border-bottom"
            >
              <div
                class="button-groups"
              >
                <div
                  class="group"
                >
                  <button
                    aria-hidden="true"
                    class="button stub"
                  >
                    cross replacer
                  </button>
                </div>
              </div>
              <div
                class="main"
              >
                <div
                  class="title truncate"
                >
                  Test title
                </div>
                <div
                  class="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                class="button-groups end"
              >
                <div
                  class="group"
                >
                  <button
                    class="button"
                  >
                    cross replacer
                  </button>
                </div>
              </div>
            </div>
            <div
              class="content full-width"
            />
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <ScreenLayout
          childrenRef={[Function]}
          fullScrollThreshold={320}
          navBarProps={
            Object {
              "buttons": Object {
                "end": Object {
                  "text": "cross replacer",
                },
              },
            }
          }
          onBack={[Function]}
          onClose={[Function]}
          subtitle="Test subtitle"
          title="Test title"
          withBackButton={false}
          withCloseButton={false}
          withDivideHeader={true}
          withHeader={true}
        >
          <NavBar
            bottomBordered={true}
            buttons={
              Object {
                "end": Object {
                  "text": "cross replacer",
                },
                "start": undefined,
              }
            }
            subtitle="Test subtitle"
            title="Test title"
          >
            <div
              className="nav-bar inner-border-bottom"
            >
              <div
                className="button-groups"
              >
                <div
                  className="group"
                >
                  <NavButton
                    shift={false}
                    stub={true}
                    text="cross replacer"
                  >
                    <button
                      aria-hidden="true"
                      className="button stub"
                    >
                      cross replacer
                    </button>
                  </NavButton>
                </div>
              </div>
              <div
                className="main"
              >
                <div
                  className="title truncate"
                >
                  Test title
                </div>
                <div
                  className="subtitle truncate"
                >
                  Test subtitle
                </div>
              </div>
              <div
                className="button-groups end"
              >
                <div
                  className="group"
                >
                  <NavButton
                    shift={false}
                    text="cross replacer"
                  >
                    <button
                      className="button"
                    >
                      cross replacer
                    </button>
                  </NavButton>
                </div>
              </div>
            </div>
          </NavBar>
          <div
            className="content full-width"
          />
        </ScreenLayout>
      </div>
    </Portal>
  </Layer>
</Screen>
`;
